# aws-service-catalog-factory

./: .coveragerc  .gitignore  .travis.yml  CONTRIBUTING.md  DEMO.md  Makefile  Makefile.CI  Makefile.CodeQuality  Makefile.Factory  Makefile.Project  Makefile.Test  NOTICE  Pipfile  README.md  nose2.cfg  pyproject.toml  pytest.ini  setup.py  test_writer.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: workflow.yml
account-vending/: README.md  factory-bootstrap.template.yaml  org-bootstrap.template.README.md  org-bootstrap.template.yaml
account-vending/account-bootstrap-shared-product/: README.md  product.template.yaml  requirements.txt
account-vending/account-bootstrap-shared-product/src/: handler.py
account-vending/account-creation-product/: README.md  product.template.yaml
account-vending/account-creation-shared-product/: README.md  product.template.yaml
account-vending/account-creation-shared-product/src/: handler.py
aws-service-catalog-factory-0.46.0/: setup.py
docs/: requirements.txt  whatisthis.xml
docs/source/: conf.py  index.rst
docs/source/factory/: building_your_pipelines.rst  cdk_support.rst  configuring_your_pipelines.md  designing_your_product.md  designing_your_product.rst  diving_into_the_pipeline.md  factory-getting-started-what-am-i-going-to-install.xml  getting_up_and_running.md  getting_up_and_running.rst  project_assurance.rst  terraform_support.rst  upgrading.md  using_the_cli.md  using_the_cli.rst  using_the_sdk.rst  utils.md  what_is_this.md
examples/: README.md
landing-zone-add-on/aws-service-catalog-factory/: add_on_manifest.yaml  user-input.yaml
reports/junit/: junit.xml
sample-portfolios/: README.md  samples.md
servicecatalog_factory/: __init__.py  aws.py  aws_test.py  cdk_support.py  cli.py  cli_test.py  cloudformation_servicecatalog_deploy_action.py  code.py  config.py  constants.py  constants_test.py  core.py  core_test.py  empty.template.yaml  environmental_variables.py  example-config-small.yaml  example-config.yaml  local_config.py  luigi_tasks_and_targets.py  luigi_tasks_and_targets_test.py  requirements-test.txt  requirements.txt  schema-apps.yaml  schema-portfolios.yaml  schema-stacks.yaml  schema-workspaces.yaml  schema.yaml  sdk.py  servicecatalog-factory-initialiser.template.yaml  servicecatalog-factory-regional.template.yaml  servicecatalog-factory-secondary.template.yaml  servicecatalog-factory.template.yaml  servicecatalog_facade.py  tasks_unit_tests_helper.py  utils.py
servicecatalog_factory/commands/: bootstrap.py  bootstrap_test.py  configuration_management.py  extract_from_ssm.py  fix_issues.py  generate.py  generic.py  list_resources.py  management.py  portfolios.py  seed.py  show_pipelines.py  stacks.py  task_reference.py  task_reference_section_constants.py  validate.py  version.py
servicecatalog_factory/common/: serialisation_utils.py  utils.py
servicecatalog_factory/portfolios/: ccoe.yaml  example-quickstart.yaml  example-simple-github.yaml  example-simple.yaml
servicecatalog_factory/schema/: schema-apps.yaml  schema-portfolios.yaml  schema-stacks.yaml  schema-workspaces.yaml
servicecatalog_factory/template_builder/: base_template.py  builders.py  builders_base.py  builders_cfn.py  builders_cfn_combined.py  builders_noncfn.py  builders_noncfn_combined.py  pipeline_template_builder.py  product_template_factory.py  product_templated.py  product_templates.py  shared_resources.py
servicecatalog_factory/template_builder/cdk/: cdk_support.py  code.py  lambda_get_outputs_code.py  lambda_start_project_code.py  product_pipeline.py  product_template.py  shared_resources.py  template_pipeline.py
servicecatalog_factory/template_builder/pipeline/: build.py  deploy.py  package.py  pipeline_template_builder.py  source.py  test.py  utils.py
servicecatalog_factory/template_builder/troposphere_contstants/: codebuild.py
servicecatalog_factory/templates/: associations.j2  combined-test-action.j2  component.j2  component_group.j2  constraint-launch-role-parent.template.yaml  constraint-launch-role.template.yaml  product-cloudformation.j2  product-combined-cloudformation.j2  product-terraform.j2  product.j2  static-html-page.html  terraform.template.yaml.j2  test-action.j2
servicecatalog_factory/templates/tests/: CFNNagBuildProject.j2  CloudformationRSpecProject.j2  ValidateProject.j2
servicecatalog_factory/utilities/: __init__.py  assets.py  assets_test.py
servicecatalog_factory/waluigi/: __init__.py  scheduler.py  tasks.py
servicecatalog_factory/workflow/: __init__.py  tasks.py  tasks_unit_tests_helper.py
servicecatalog_factory/workflow/codecommit/: create_code_repo_task.py  create_code_repo_task_test.py
servicecatalog_factory/workflow/dependencies/: reservable_resources.py  resources_factory.py  section_names.py  task_factory.py
servicecatalog_factory/workflow/generic/: __init__.py  create_generic_version_pipeline_task.py  delete_stack_task.py
servicecatalog_factory/workflow/portfolios/: associate_product_with_portfolio_task.py  associate_product_with_portfolio_task_test.py  create_portfolio_task.py  (+27 more)
testing/: .gitignore
(+13 files in other folders)
