# Copyright 2019 Amazon.com, Inc. or its affiliates. All Rights Reserved.
# SPDX-License-Identifier: Apache-2.0

[tool.poetry]
name = "aws-service-catalog-factory"
version = "0.48.0"
description = "Making it easier to build ServiceCatalog products"
classifiers = ["Development Status :: 5 - Production/Stable", "Intended Audience :: Developers", "Programming Language :: Python :: 3", "License :: OSI Approved :: Apache Software License", "Operating System :: OS Independent", "Natural Language :: English"]
homepage = "https://service-catalog-tools-workshop.com/"
readme = "README.md"
repository = "https://github.com/awslabs/aws-service-catalog-factory-framework"
authors = ["Eamonn Faherty <aws-service-catalog-tools@amazon.com>"]
packages = [
    { include = "servicecatalog_factory", from = "." },
]
include = ["servicecatalog_factory"]

[tool.poetry.scripts]
servicecatalog-factory = "servicecatalog_factory.cli:cli"

[tool.poetry.urls]
issues = "https://github.com/awslabs/aws-service-catalog-factory-framework/issues"

[tool.poetry.dev-dependencies]
pytest-datadir = "*"
pytest = "*"
pytest-cov = "*"
codecov = "==2.0.22"
pylint = "*"
pytest-mock = "*"
black = "^19.10b0"

[tool.dephell.main]
versioning = "semver"
from = {format = "poetrylock", path = "poetry.lock"}
envs = ["main"]
to = {format = "poetry", path = "pyproject.toml"}

[tool.poetry.dependencies]
python = ">=3.7"
pyyaml = "==5.3.1"
docutils = "==0.14"
jinja2 = "==2.10.1"
click = "==7.0"
boto3 = "*"
pykwalify = "==1.7.0"
better-boto = "==0.26.0"
cfn-flip = "==1.2.1"
terminaltables = "==3.1.0"
luigi = "==2.8.6"
requests = "==2.22.0"
pylint = "==2.5.0"
colorclass = "^2.2.0"
colorama = "^0.4.4"
