# Copyright 2019 Amazon.com, Inc. or its affiliates. All Rights Reserved.
# SPDX-License-Identifier: Apache-2.0

[tool.poetry]
name = "aws-service-catalog-factory"
version = "0.70.0"
description = "Making it easier to build ServiceCatalog products"
classifiers = ["Development Status :: 5 - Production/Stable", "Intended Audience :: Developers", "Programming Language :: Python :: 3", "License :: OSI Approved :: Apache Software License", "Operating System :: OS Independent", "Natural Language :: English"]
homepage = "https://service-catalog-tools-workshop.com/"
readme = "README.md"
repository = "https://github.com/awslabs/aws-service-catalog-factory-framework"
authors = ["Eamonn Faherty <aws-service-catalog-tools@amazon.com>"]
packages = [
    { include = "servicecatalog_factory", from = "." },
]
include = ["servicecatalog_factory"]

[tool.poetry.scripts]
servicecatalog-factory = "servicecatalog_factory.cli:cli"

[tool.poetry.urls]
issues = "https://github.com/awslabs/aws-service-catalog-factory-framework/issues"

[tool.poetry.dev-dependencies]
codecov = "==2.0.22"
pylint = "*"
black = "^19.10b0"
nose2 = "^0.10.0"

[tool.dephell.main]
versioning = "semver"
from = {format = "poetrylock", path = "poetry.lock"}
envs = ["main"]
to = {format = "poetry", path = "pyproject.toml"}

[tool.poetry.dependencies]
python = ">=3.7,<4"
docutils = "==0.14"
jinja2 = "==2.11.3"
click = "==7.0"
boto3 = "1.19.2"
cfn-flip = "==1.2.3"
terminaltables = "==3.1.0"
luigi = "==2.8.6"
requests = "2.26.0"
colorclass = "^2.2.0"
troposphere = "3.1.0"
PyYAML = "5.4"
better-boto = "0.43.0"
deepmerge = "^0.3.0"
yamale = "^3.0.8"
